<resources>
    <string name="app_name">Task Eat</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_email">Introduce tu correo...</string>
    <string name="enter_your_pass">Introduce tu contraseña...</string>
    <string name="login"> Inicia Sesión</string>
    <string name="register"> Regístrate </string>
    <string name="not_registered">¿No estás registrado aún? </string>
    <string name="with_account"> ¿Ya tienes una cuenta? </string>
    <string name="re_enter_your_pass">Vuelve a introducir tu contraseña...</string>
    <string name="type_title">Título </string>
    <string name="new_list"> Crear nueva lista</string>
    <string name="calendar"> Calendario </string>
    <string name="lists"> Listas </string>
    <string name="menu"> Menu </string>
    <string name="hi"> Hola Trucker </string>
    <string name="my_tasks">Tienes 4 alimentos en tus listas</string>
    <string name="create_task"> Crear </string>
    <string name="create_new_task"> Crear nueva tarea </string>
    <string name="create_new_category"> Crear nueva categoría </string>
    <string name="add_category"> Añadir categoría </string>
    <string name="category"> Categoria </string>
    <string name="date"> Fecha </string>
    <string name="navigation_drawer_open"> ABRIENDOSE Y TAL </string>
    <string name="navigation_drawer_close"> CERRANDOSE SI ESO </string>
    <string name="create_new_list">Crear nueva lista</string>
    <string name="today_taks">Listas para hoy </string>
</resources>